# airbyte-custom-ezg

./: .gitignore  build.gradle  settings.gradle
.github/workflows/: agent-sdk-docs-generate.yml  ai-canary-prerelease-command.yml  ai-create-docs-pr-command.yml  ai-dev-command.yml  ai-docs-review-command.yml  ai-prove-fix-command.yml  ai-ready-command.yml  ai-release-watch-command.yml  ai-review-command.yml  auto-upgrade-certified-connectors-cdk.yml  autodoc.yml  block-release-check.yml  block-release.yml  build-connector-images-command.yml  bump-version-command.yml  cdk-destination-connector-compatibility-test.yml  cdk-source-connector-compatibility-test.yml  community-pr-permissions-check.yml  connector-active-progressive-rollout-checks.yml  connector-ci-checks.yml  connector-image-build.yml  connectors-cdk-version-check.yml  connectors-up-to-date.yml  docker-connector-base-image-tests.yml  docker-connector-image-publishing.yml  docker-image-pruning.yml  docs-build.yml  finalize_rollout.yml  force-merge-command.yml  format-fix-command.yml  format_check.yml  generate-connector-registries.yml  gradle-dependency-diff.yml  hydra-automerge.yml  java-bulk-cdk-base-publish.yml  java-bulk-cdk-extract-publish.yml  java-bulk-cdk-load-publish.yml  java-cdk-tests.yml  kotlin-bulk-cdk-dokka-publish.yml  notify-on-replication-version-change.yml  (+13 more)
airbyte-integrations/: pyproject.toml
airbyte-integrations/connectors/source-apple-store-custom/source-apple-store-custom/: .gitignore  Dockerfile  README.md  build.sh  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-apple-store-custom/source-apple-store-custom/secrets/: test_config.json
airbyte-integrations/connectors/source-apple-store-custom/source-apple-store-custom/source_apple_store_custom/: __init__.py  client.py  run.py  source.py  spec.yaml  streams.py
airbyte-integrations/connectors/source-apple-store-custom/source-apple-store-custom/source_apple_store_custom/schemas/: app_installations.json  app_sessions.json  financial_report.json  summary_sales.json
airbyte-integrations/connectors/source-exchange-rate/: AIRBYTE_CONNECTOR_PLAYBOOK.md  Dockerfile  README.md  gitignore  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-exchange-rate-custom/: .gitignore  Dockerfile  README.md  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-exchange-rate-custom/secrets/: test_config.json
airbyte-integrations/connectors/source-exchange-rate-custom/source_exchange_rate_custom/: __init__.py  oxr_client.py  run.py  source.py  spec.yaml  streams.py
airbyte-integrations/connectors/source-exchange-rate-custom/source_exchange_rate_custom/schemas/: exchange_rates.json
airbyte-integrations/connectors/source-exchange-rate/secrets/: catalog.json  config.json  config_sample.json
airbyte-integrations/connectors/source-exchange-rate/source_exchange_rate/: __init__.py  frankfurter_client.py  run.py  source.py  spec.yaml  streams.py
airbyte-integrations/connectors/source-exchange-rate/source_exchange_rate/schemas/: exchange_rates.json
airbyte-integrations/connectors/source-google-analytics/: .gitignore  Dockerfile  README.md  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-google-analytics/secrets/: test_config.json
airbyte-integrations/connectors/source-google-analytics/source_google_analytics/: __init__.py  ga4_client.py  run.py  source.py  spec.yaml  streams.py
airbyte-integrations/connectors/source-google-play-console/: .gitignore  Dockerfile  README.md  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-google-play-console/scripts/: list_bucket.py  print_headers.py  test_read.py
airbyte-integrations/connectors/source-google-play-console/source_google_play_console/: __init__.py  gcs_client.py  run.py  source.py  spec.yaml  streams.py
airbyte-integrations/connectors/source-google-play-console/source_google_play_console/schemas/: earnings.json  estimated_sales.json  installs_country.json  installs_overview.json  ratings.json  reviews.json
